<resources>
    //Nom de l'application
    <string name="app_name">Sales of second-hand articles</string>

    //Page Acceuil
    <string name="ajoutArticle">Add a new article</string>
    <string name="recherchePrix">Search an article by price</string>
    <string name="rechercheVille">Search an article by city</string>

    //Page ajout
    <string name="nomArticle">Name :</string>
    <string name="descriptif">Description : </string>
    <string name="prix">Price : </string>
    <string name="etat">Condition : </string>
    <string name="ville">City : </string>
    <string name="information">Information :</string>
    <string name="radioEnvoyer">Can be sent</string>
    <string name="radioMain">Picked up by hands</string>
    <string name="btnAjout">Add</string>
    <string name="radioNeuf">New</string>
    <string name="radioUse">Used</string>

    //Page recherche prix
    <string name="prixMin">Minimum price : </string>
    <string name="prixMax">Maximum price : </string>

    //Page recherche ville
    <string name="villeRecherche">Ville recherchée : </string>

    //Page result
    <string name="precedent">Previous</string>
    <string name="suivant">Next</string>
    <string name="triAscendant">Upward</string>
    <string name="triDescendant">Downward</string>

    //Commun
    <string name="btnCherche">Search</string>
    <string name="btnRetour">Back</string>

    //Erreurs
    <string name="erreurChampManquant">All fields must be filled</string>
    <string name="listeVide">List is empty</string>
</resources>
