<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.basti.projetjanvier.AcceuilActivity">

    <Button
        android:id="@+id/ajoutArticle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ajoutArticle"
        android:layout_marginTop="120dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        style="@style/titre" />

    <Button
        android:id="@+id/recherchePrix"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recherchePrix"
        android:layout_marginTop="20dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ajoutArticle"
        style="@style/titre"/>

    <Button
        android:id="@+id/rechercheVille"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rechercheVille"
        android:layout_marginTop="20dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recherchePrix"
        style="@style/titre"/>
</android.support.constraint.ConstraintLayout>
